test/compile-fail/type__unknown.he
fn main
{
    let a:Type; //~ ERROR 3004
}
